[workspace]

resolver = "2"
members = [
  "spartacus_cli",
  "spartacus_crypto",
  "spartacus_desktop",
  "spartacus_storage",
  "boringascii",
]

[workspace.package]
edition = "2021"
rust-version = "1.65"
license = ""
repository = "https://github.com/benwr/spartacus"

[workspace.dependencies]
boringascii = { path = "boringascii" }

spartacus_crypto = { path = "spartacus_crypto" }
spartacus_storage = { path = "spartacus_storage" }

age = { git = "https://github.com/benwr/rage.git", branch = "spartacus_patch" }

borsh = { version = "1.0.0-alpha.4", features = ["derive"] }
rand = { version = "0.8", features = ["getrandom"] }
zeroize = { version = "1", features = ["zeroize_derive"] }
