[workspace]

resolver = "2"
members = [
  "spartacus_crypto",
  "spartacus_desktop",
  "spartacus_storage",
  "boringascii",
]

[workspace.package]
edition = "2021"
rust-version = "1.65"
authors = ["Ben Weinstein-Raun <b@w-r.me>"]
license = ""
repository = "https://github.com/benwr/spartacus"

[workspace.dependencies]
boringascii = { path = "boringascii" }

spartacus_crypto = { path = "spartacus_crypto" }
spartacus_storage = { path = "spartacus_storage" }

# My fork uses a much smaller work factor for age encryption, because we are
# constantly decrypting the db file, and we never let the user choose a
# passphrase. Important to keep up to date with upstream, though.
age = { git = "https://github.com/benwr/rage.git", branch = "spartacus_patch" }

borsh = { version = "1.0.0-alpha.4", features = ["derive"] }
rand = { version = "0.8", features = ["getrandom"] }
zeroize = { version = "1", features = ["zeroize_derive"] }
