[package]
name = "spartacus_crypto"
version = "0.0.0"
edition = "2021"

[dependencies]
borsh.workspace = true
printable_ascii.workspace = true

rand.workspace = true
zeroize.workspace = true

curve25519-dalek = { version = "4", features = ["alloc", "digest", "rand_core"] }
regex = "1"
sha3 = "0.10"
z85 = "3"
