[package]
name = "Spartacus"
description = "A tool for creating and verifying ring signatures."
version = "0.1.0"
edition = "2021"

[lib]
name = "spartacus"
path = "src/lib.rs"

[[bin]]
name = "Spartacus"
path = "src/main.rs"

[dependencies]
copypasta = "0.8"
dioxus = "0.4.0"
dioxus-desktop = "0.4.0"
dioxus-free-icons = {version = "0.7.0", features = ["font-awesome-regular"]}
secmem-proc = "0.3"

printable_ascii.workspace = true
spartacus_crypto.workspace = true
spartacus_storage.workspace = true

[package.metadata.bundle]
identifier = "me.w-r.Spartacus"
icon = ["spartacus_head.png"]
