[package]
name = "Spartacus"
description = "A tool for creating and verifying ring signatures."
version = "1.0.0-alpha"
edition = "2021"

[lib]
name = "spartacus"
path = "src/lib.rs"

[[bin]]
name = "Spartacus"
path = "src/main.rs"

[dependencies]
copypasta = "0.8"
dioxus = "0.4.3"
dioxus-desktop = "0.4.0"
dioxus-free-icons = {version = "0.7.0", features = ["octicons"]}
secmem-proc = "0.3"

boringascii.workspace = true

spartacus_crypto.workspace = true
spartacus_storage.workspace = true

[package.metadata.bundle]
name = "Spartacus"
identifier = "me.w-r.Spartacus"
icon = ["spartacus_head.png"]
category = "public.app-category.utilities"
