[package]
name = "ZebraSign"
description = "A tool for creating and verifying ring signatures."
version = "1.0.0-alpha"
edition = "2021"

[lib]
name = "zebra"
path = "src/lib.rs"

[[bin]]
name = "ZebraSign"
path = "src/main.rs"

[dependencies]
copypasta = "0.10"

# We need to use the master branch because the 0.4.3 release crashes on m1 macs when you edit the menu bar.
dioxus = { git = "https://github.com/DioxusLabs/dioxus.git", branch = "master" }
dioxus-desktop = { git = "https://github.com/DioxusLabs/dioxus.git", branch = "master" }
# dioxus-free-icons = {version = "0.7.0", features = ["octicons"]}
dioxus-free-icons = { git = "https://github.com/SimonBaars/dioxus-free-icons.git", branch = "main", features = ["octicons"] }
secmem-proc = "0.3"

boringascii.workspace = true

zebra_crypto.workspace = true
zebra_storage.workspace = true

[package.metadata.bundle]
name = "ZebraSign"
identifier = "me.w-r.Zebra"
icon = ["zebra_head.png"]
category = "public.app-category.utilities"
