[package]
name = "zebra_storage"
version = "0.0.0"
edition = "2021"

[features]
default = []
debug = []

[dependencies]
zebra_crypto.workspace = true
boringascii.workspace = true

age.workspace = true
borsh.workspace = true
rand.workspace = true
zeroize.workspace = true

directories = "5"
fs2 = "0.4"
keyring = "2"
ouroboros = "0.18"
tempfile = "3"
time = "0.3"
whoami = "1"


